--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,3 @@
-/* ======= Estilo Portfolio CV ======= */
-
 body {
     margin: 0;
     font-family: "Montserrat", sans-serif;
@@ -9,7 +7,7 @@ body {
 }
 
 
-/* PANEL IZQUIERDO */
+/* panel izquierdo */
 .sidebar {
     width: 280px;
     background: #253258;
@@ -41,7 +39,7 @@ body {
     opacity: 0.8;
 }
 
-/* Secciones sidebar */
+/* secciones sidebar */
 .sidebar h2 {
     margin-top: 30px;
     font-size: 16px;
@@ -59,18 +57,17 @@ body {
     margin: 6px 0;
 }
 
-/* ENLACES sidebar */
+/* enlaces sidebar */
 .sidebar a {
     color: #83d4ff;
     text-decoration: none;
 }
 
-/* ===== CONTENIDO PRINCIPAL ===== */
+/* principal */
 
 .content {
     flex: 1;
     padding: 40px 60px;
-    background: white;
 }
 
 .content h2 {
@@ -92,7 +89,7 @@ body {
     margin-bottom: 6px;
 }
 
-/* CONTROLES ACCESIBILIDAD */
+/* controles */
 .controls {
     position: fixed;
     right: 5px;
@@ -113,6 +110,7 @@ body {
 
 section h2 {
     font-size: 26px;
+    margin-top: 40px;
     margin-bottom: 8px;
     position: relative;
 }
@@ -175,7 +173,6 @@ body {
     padding: 20px;
 }
 }
-
 
 
 
